--- a/company_intro.html
+++ b/company_intro.html
@@ -12,7 +12,8 @@
 <body>
     <div id="header"></div>
     <!--container -->
-    <div class="sn-blue-bg"></div>
+    <!--<div class="sn-blue-bg"></div>-->
+    <img width="100%" src="images/update_imgs/clock.jpg">
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
 
@@ -32,17 +33,11 @@
     <section class="sn-we-news border-bottom-grey text-left">
         <div class="wrap clear-fix ">
             <p class="sn-wen-content">
-                深思是中国软件版权保护行业的领军企业。公司专注于软件和数据安全保护核心技术和产品的研发，为软件行业提供软件和数据保护产品及解决方案。
+                北京深思数盾科技股份有限公司注册成立于2013年3月，位于北京市海淀区，实际注册资本2000万，是一家专注于软件授权保护、互联网授权服务和安全产品开发的创新性科技企业。
+                深思的核心产品是“深思云授权平台”，目标是协助中国的软件企业向以用户为中心的互联网模式转变。在为软件企业和中小型软件开发团队带来更广阔的发展空间的同时，也为软件的使用者带来了更佳的使用体验。
+                深思的愿景是成为“企业数据财富的保护者”，在财富快速数字化的互联网时代，致力于保护企业客户的数据财富安全，特别是软件企业的软件产品以及各型企业在云端存储和使用的商业数据。2016年初深思完成了一次定向融资，开始进入新一轮的快速发展轨道。
+                深思在软件保护、互联网安全、硬件安全产品领域具有深厚的技术积累，2013年公司注册时，整合了具有近20年发展历史的深思洛克的全部软件加密锁业务和完整的技术团队。凭借卓越的技术和诚实守信的口碑，深思成为了用友、广联达、金蝶、北大方正、科大讯飞、H3C、和利时、海康威视等一大批国内软件行业领导者的长期合作伙伴，也为摩托罗拉、索尼、西门子、NEC等国际知名企业提供产品和服务。全球有超过5000家软件企业累计使用了超过1300万套深思产品，其中智能卡产品超过1000万套。
 
-                20年前，三位清华学子带着创业的激情和改变中国软件盗版乱象的决心创立了深思。此后，共有超过10位清华人为深思的发展作出了卓著的贡献。从诞生的那一天起，创新就被定义为深思的灵魂，我们也一直以创新精神引领软件版权保护行业的技术发展。深思在软件版权保护领域拥有国内国际发明专利100多项，是中国软件版权保护领域最具技术竞争优势的企业。
-
-                我们曾经引导了软件保护行业迄今为止最重要的产业变革：第一次，深思发明了可编程的加密锁并获得了首个专利；第二次，发明了可移植代码的智能卡加密锁，带领世界进入了智能卡软件保护技术的新时代。
-
-                现在，第三次产业变革在我们的引导下已经到来。我们将致力于协助软件企业向以用户为中心的互联网模式全面转变，以互联网授权代替软件许可，保护用户云数据安全。
-
-                凭借卓越的技术创新能力和诚实守信的口碑，深思成为了广联达、用友、金蝶、北大方正、科大讯飞、H3C、和利时、海康威视等国内软件行业领导者的长期合作伙伴，也成功为摩托罗拉、索尼、西门子、NEC等国际知名企业提供产品和服务。全球有超过5000家企业累计使用了超过1300万套深思产品，其中智能卡产品超过1000万套。
-
-                我们将继续坚持专业、诚信的品格，成为更多软件企业可信赖的专业技术伙伴，实现深思“企业数据财富保护者”的愿景目标。
             </p>
         </div>
     </section>
