--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <p>顶级安全技术全自动加密引擎远离盗版</p>
                         <a href="javascript:void(0);" class="reg-btn js_location_url" data-url="register">免费注册</a>
                     </div>
-                    <img src="images/slides/1.jpg">
+                    <img src="images/slides/1.png">
                 </div>
             </div>
             <div class="swiper-slide  ">
@@ -30,7 +30,7 @@
                         <p>即时授权 提升用户体验<br/> 软件保护“零成本”</p>
                         <a href="javascript:void(0);" class="reg-btn js_location_url" data-url="register">免费注册</a>
                     </div>
-                    <img src="images/slides/2.jpg">
+                    <img src="images/slides/2.png">
                 </div>
             </div>
             <div class="swiper-slide  ">
@@ -40,7 +40,7 @@
                         <p>精准掌握所有软件授权使用情况 </p>
                         <a href="javascript:void(0);" class="reg-btn js_location_url" data-url="register">免费注册</a>
                     </div>
-                    <img src="images/slides/3.jpg">
+                    <img src="images/slides/3.png">
                 </div>
             </div>
             <div class="swiper-slide">
@@ -50,7 +50,7 @@
                         <p>顶级安全技术全自动加密引擎 远离盗版</p>
                         <a href="javascript:void(0);" class="reg-btn js_location_url" data-url="register">免费注册</a>
                     </div>
-                    <img src="images/slides/4.jpg">
+                    <img src="images/slides/4.png">
                 </div>
             </div>
         </div>
