--- a/platform_intro.html
+++ b/platform_intro.html
@@ -169,7 +169,7 @@
                 </div>
             </div>
             <div class="snphc-img fr">
-                <img class="snphc-img" src="images/platform/intro_3.jpg" style="width: 300px;">
+                <img class="snphc-img" src="images/platform/intro_3.jpg" >
             </div>
         </div>
     </section>
