--- a/vp_tools.html
+++ b/vp_tools.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="snphc-img fl">
-                <img class="snphc-img" src="images/vp_tools/2.jpg">
+                <img class="snphc-img margin-t-20" src="images/vp_tools/2.png">
             </div>
         </div>
     </section>
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="snphc-img fl">
-                <img class="snphc-img" src="images/vp_tools/3.jpg">
+                <img class="snphc-img margin-t-50" src="images/vp_tools/3.png">
             </div>
         </div>
     </section>
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="snphc-img fl">
-                <img class="snphc-img" src="images/vp_tools/4.jpg">
+                <img class="snphc-img margin-t-100"  src="images/vp_tools/4.png">
             </div>
         </div>
     </section>
