--- a/news_detail.html
+++ b/news_detail.html
@@ -12,7 +12,8 @@
 <body>
     <div id="header"></div>
     <!--container -->
-    <div class="sn-blue-bg"></div>
+    <!--<div class="sn-blue-bg"></div>-->
+    <img width="100%" src="images/update_imgs/clock.jpg">
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
 
