--- a/header.html
+++ b/header.html
@@ -143,7 +143,7 @@
             <div class="bg-slide" ></div>
         </nav>
         <div class="action fr">
-            <a class="login js_location_url"  data-url="login" href="javascript:void(0);">云帐号登录</a>
+            <a class="sn-login js_location_url"  data-url="login" href="javascript:void(0);">云帐号登录</a>
         </div>
     </div>
 </header>
