--- a/auth_tools.html
+++ b/auth_tools.html
@@ -22,7 +22,7 @@
             <span>专业工具</span>   <span>></span>
             <span><a class="js_location_url" data-url="vp_tools" href="javascript:void(0)">VIRBOX PROTECTOR</a></span>    <span>|</span>
             <span class="active">开发商工具</span>    <span>|</span>
-            <span><a class="js_location_url" data-url="user_tools"  href="javascript:void(0)">开发商工具</a></span>
+            <span><a class="js_location_url" data-url="user_tools"  href="javascript:void(0)">许可管理工具</a></span>
         </div>
     </section>
 
@@ -54,36 +54,36 @@
             <div class="sn-pt-item">
                 <p class="sn-pti-title">获得正式版</p>
                 <p class="sn-pti-sub-title"></p>
-                <p class="sn-pti-desc">
+                <p class="sn-pti-desc ">
                     开发者必须获得正式的开发者ID，才能向深思申请正式的Virbox Protector版本。每个开发者所获得的Virbox Protector都经过个性化定制，以最大程度保护软件的安全性。
                 </p>
             </div>
         </div>
     </section>
-    <section  class="sn-pt-section border-bottom-grey  text-left">
+    <section  class="sn-pt-section   text-left">
         <div class="wrap clear-fix text-left">
             <div class="sn-pt-item">
                 <p class="sn-pti-title">下载开发商工具</p>
                 <p class="sn-pti-sub-title"></p>
-                <p class="sn-pti-desc">
+                <p class="sn-pti-desc color-black-2">
                     开发商工具的离线版，也可以不依赖于深思云授权平台独立运行。对于一些特殊的开发者，例如保密单位，开发商工具可以将所发行的授权保存为“授权包”的形式。开发者可以用适宜的方式（例如邮件）将授权包发送给用户，用户再获得授权包之后，可以通过开发商工具完成授权的安装。
 
                 </p>
             </div>
         </div>
     </section>
-    <section  class="sn-pt-section  text-left">
-        <div class="wrap clear-fix text-left">
-            <div class="sn-pt-item">
-                <p class="sn-pti-title">了解更多</p>
-                <p class="sn-pti-sub-title"></p>
-                <p class="sn-pti-desc">
-                    关于开发商工具使用的更多细节，请参考下面的链接。
-                </p>
-                <a class="color-orange relative js_location_url animate_hover_move" data-url="vp_doc_download"  href="javascript:void(0);">Virbox Protector 文档  >></a><br>
-            </div>
-        </div>
-    </section>
+    <!--<section  class="sn-pt-section  text-left">-->
+        <!--<div class="wrap clear-fix text-left">-->
+            <!--<div class="sn-pt-item">-->
+                <!--<p class="sn-pti-title">了解更多</p>-->
+                <!--<p class="sn-pti-sub-title"></p>-->
+                <!--<p class="sn-pti-desc">-->
+                    <!--关于开发商工具使用的更多细节，请参考下面的链接。-->
+                <!--</p>-->
+                <!--<a class="color-orange relative js_location_url animate_hover_move" data-url="vp_doc_download"  href="javascript:void(0);">Virbox Protector 文档  >></a><br>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</section>-->
 
 
     <div id="footer"></div>
