--- a/platform_intro.html
+++ b/platform_intro.html
@@ -31,9 +31,9 @@
         <div class="wrap clear-fix text-left">
             <div class="snphc-desc fl">
                 <div class="sn-phcd-center">
-                    <div class="snphc-title color-black-3"></div>
-                    <div class="snphc-title-2 color-black-3">什么是云授权平台</div>
-                    <div class="snphc-abstract color-black-3">
+                    <div class="snphc-title "></div>
+                    <div class="snphc-title-2 ">什么是云授权平台</div>
+                    <div class="snphc-abstract ">
                         基于云的软件授权管理系统，给任意用户发行软件授权并管理其完整生命周期。用户可以在任何时间、任何地点、任何设备上使用已经获得的软件授权，而不再像过去一样只能将软件安装到特定的计算机上。
                         <br>
                         在云授权平台中，软件授权是用户的“资产”。用户既可以在云端使用，也可以将授权下载到自己的加密锁中以获得更好的体验。这一切都是安全的，无需担心授权被非法复制、滥用或越界，也不再用担心因授权丢失而导致的复杂处理过程。
@@ -54,10 +54,10 @@
             <div class="snphc-desc fl">
                 <div class="sn-phcd-center">
                     <div class="snphc-title color-black-3"></div>
-                    <div class="snphc-title-2 color-black-3"></div>
+                    <div class="snphc-title-2 "></div>
                     <div class="snphc-abstract color-black-3">
                     </div>
-                    <div class="snphc-content line-height-30 color-black-3">
+                    <div class="snphc-content line-height-30 ">
                         过去，做软件不用加密锁，就会被盗。<br/>
                         用了加密锁，能解决盗版，可是也带来一堆伤脑筋的问题：<br/>
                         ■ 加密锁采购需要成本。<br/>
@@ -79,11 +79,11 @@
         <div class="wrap clear-fix text-left">
             <div class="snphc-desc fl">
                 <div class="sn-phcd-center">
-                    <div class="snphc-title color-black-3"></div>
-                    <div class="snphc-title-2 color-black-3"></div>
-                    <div class="snphc-abstract color-black-3">
+                    <div class="snphc-title "></div>
+                    <div class="snphc-title-2 "></div>
+                    <div class="snphc-abstract ">
                     </div>
-                    <div class="snphc-content line-height-30 color-black-3">
+                    <div class="snphc-content line-height-30 ">
                         现在，有了深思云授权平台，一切都迎刃而解。<br/>
                         <img class="snphc-img" src="images/platform/plat_2_txt.jpg"><br/>
                         软件可以快速交付给用户，再也不用管加密锁的事儿了！<br/>
@@ -104,11 +104,11 @@
         <div class="wrap clear-fix text-left">
             <div class="snphc-desc fl">
                 <div class="sn-phcd-center">
-                    <div class="snphc-title color-black-3"></div>
-                    <div class="snphc-title-2 color-black-3"></div>
+                    <div class="snphc-title "></div>
+                    <div class="snphc-title-2 "></div>
                     <div class="snphc-abstract color-black-3">
                     </div>
-                    <div class="snphc-content line-height-30 color-black-3">
+                    <div class="snphc-content line-height-30 ">
                         除了省心、省力、省钱，还有意想不到的好处：<br/>
                         强大的授权管理功能，什么试用、租用、按需付费、弹性授权等，瞬间解决。<br/>
                         哪些功能用的多，哪些用的少，用户地理分布的情况，全盘掌握。<br/>
@@ -132,7 +132,7 @@
                     <div class="snphc-title-2 color-black-3"></div>
                     <div class="snphc-abstract color-black-3">
                     </div>
-                    <div class="snphc-content line-height-30 color-black-3">
+                    <div class="snphc-content line-height-30 ">
                         要是用户自己想要个加密锁，方便管理和提升体验怎么办？<br/>
                         用户自己找深思买就得了，需要服务也找深思。<br/>
                         已经发出的授权可以在云上用，也可以下载到加密锁里用。<br/>
@@ -154,10 +154,10 @@
             <div class="snphc-desc fl">
                 <div class="sn-phcd-center">
                     <div class="snphc-title color-black-3"></div>
-                    <div class="snphc-title-2 color-black-3">成本与费用</div>
+                    <div class="snphc-title-2 ">成本与费用</div>
                     <div class="snphc-abstract color-black-3">
                     </div>
-                    <div class="snphc-content line-height-30 color-black-3">
+                    <div class="snphc-content line-height-30 ">
                         单纯的云授权服务是免费的，例如开发者向用户发行在线的试用授权，双方都无需支付任何费用。
                         <br>
                         如果用户希望使用加密锁以获得更好的离线体验，因为加密锁是100％远程操作的，所以用户可以自己购买。
@@ -180,8 +180,8 @@
             <div class="snphc-desc fl">
                 <div class="sn-phcd-center">
                     <div class="snphc-title color-black-3"></div>
-                    <div class="snphc-title-2 color-black-3">如何使用</div>
-                    <div class="snphc-abstract color-black-3">
+                    <div class="snphc-title-2 ">如何使用</div>
+                    <div class="snphc-abstract ">
                         只需在深思云授权平台上注册开发者账号，并获得正式的开发者ID，就可以立即使用深思云授权平台所带来的一切便利。
                         <br>
                         完整的过程仅需要：加密、发布、授权三个步骤，可以100%通过工具实现，开发者甚至不需要为此编写任何一行代码！
