--- a/vp_tools.html
+++ b/vp_tools.html
@@ -13,7 +13,7 @@
 
     <!--container -->
     <!--<img width="100%" src="images/vp_tools/desc.jpg">-->
-    <img width="100%" src="images/update_imgs/virbox.jpg">
+    <img width="100%" src="images/update_imgs/virbox.png">
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
 
@@ -31,8 +31,8 @@
         <div class="wrap clear-fix text-left">
             <div class="snphc-desc fr">
                 <div class="sn-phcd-center">
-                    <div class="snphc-title-2 color-black-3">VIRBOX PROTECTOR</div>
-                    <div class="snphc-abstract color-black-3">
+                    <div class="snphc-title-2 ">VIRBOX PROTECTOR</div>
+                    <div class="snphc-abstract ">
                         Virbox Protector与深思云锁或精锐5配套使用，集自动代码移植、虚拟化、外壳加密、数据加密与一身，是业界领先的软件保护工具。Virbox Protector具有高度的灵活性和自动化能力，开发者只需要简单的操作，就可以使被保护的软件安全强度达到专业级水准。
                         <br>
                         Virbox Protector加密后的软件，开发者就可以公开发布，任何用户都可以下载。但是，在开发者使用授权管理工具为某个特定的用户或者组织发放授权之前，软件是不能被使用的。
@@ -55,8 +55,8 @@
         <div class="wrap clear-fix text-left">
             <div class="snphc-desc fr">
                 <div class="sn-phcd-center">
-                    <div class="snphc-title-2 color-black-3 ">试用版</div>
-                    <div class="snphc-abstract color-black-3">
+                    <div class="snphc-title-2  ">试用版</div>
+                    <div class="snphc-abstract ">
                         <!--任何开发者都可以在注册后试用Virbox Protector。但是，试用版本只是提供给开发者最基本的演示能力，与正式版相比，安全性与正式版一致。。-->
                         任何开发者都可以在注册后试用Virbox Protector。但是，试用版本只是提供给开发者最基本的演示能力，与正式版相比，试用版的安全性要低很多。。
                         <br>
@@ -76,14 +76,14 @@
         <div class="wrap clear-fix text-left">
             <div class="snphc-desc fr">
                 <div class="sn-phcd-center">
-                    <div class="snphc-title-2 color-black-3 ">获得正式版</div>
-                    <div class="snphc-abstract color-black-3">
+                    <div class="snphc-title-2  ">获得正式版</div>
+                    <div class="snphc-abstract ">
                         我们为每个正式的开发者提供专用的Virbox Protector版本，以确保每个加密方案都是独特的，这可以最大程度保护软件的安全性。
                         <br>
                         所以，绝对不要把你所获得的正式版Virbox Protector泄露出去，否则将大大不利于你的软件产品的版权保护。
                     </div>
                     <div class="snphc-link">
-                        <a class="color-orange js_location_url" href="javascript:void(0);" data-url="register" >免费注册成为正式开发者 》</a><br>
+                        <a class="color-orange js_location_url" href="javascript:void(0);" data-url="register" >免费注册云帐号</a><br>
                     </div>
                 </div>
             </div>
@@ -97,8 +97,8 @@
         <div class="wrap clear-fix text-left">
             <div class="snphc-desc fr">
                 <div class="sn-phcd-center">
-                    <div class="snphc-title-2 color-black-3  ">了解更多</div>
-                    <div class="snphc-abstract color-black-3">
+                    <div class="snphc-title-2   ">了解更多</div>
+                    <div class="snphc-abstract ">
                         Virbox Protector对于初学者来说非常简单和易用，几乎不需要特别的加密知识就可以将软件保护做好。对于专家而言，Virbox Protector也提供了强大的定制化能力。
                     </div>
                     <div class="snphc-link">
