--- a/ss_service.html
+++ b/ss_service.html
@@ -29,7 +29,7 @@
 
     <!--container list-->
     <section class="text-left">
-        <div class="wrap sn-big-title color-orange">
+        <div class="wrap sn-big-title ">
             SS安全服务
         </div>
     </section>
