--- a/user_tools.html
+++ b/user_tools.html
@@ -29,7 +29,7 @@
 
     <!--container list-->
     <section class="text-left">
-        <div class="wrap sn-big-title color-orange">
+        <div class="wrap sn-big-title ">
             许可管理工具
         </div>
     </section>
