--- a/auth_tools.html
+++ b/auth_tools.html
@@ -28,7 +28,7 @@
 
     <!--container list-->
     <section class="text-left">
-        <div class="wrap sn-big-title color-orange">
+        <div class="wrap sn-big-title ">
             开发商工具
         </div>
     </section>
