--- a/platform_intro.html
+++ b/platform_intro.html
@@ -26,6 +26,11 @@
         </div>
     </section>
 
+    <section class="text-left">
+        <div class="wrap sn-big-title ">
+            了解云授权平台
+        </div>
+    </section>
     <!--container list-->
     <section  class="sn-phc-item border-bottom-grey">
         <div class="wrap clear-fix text-left">
