--- a/auth_tools.html
+++ b/auth_tools.html
@@ -57,6 +57,8 @@
                 <p class="sn-pti-desc ">
                     开发者必须获得正式的开发者ID，才能向深思申请正式的Virbox Protector版本。每个开发者所获得的Virbox Protector都经过个性化定制，以最大程度保护软件的安全性。
                 </p>
+                <a class="color-orange relative js_location_url animate_hover_move font-size-16" data-url="register"  href="javascript:void(0);">免费注册云帐号</a>
+
             </div>
         </div>
     </section>
