--- a/ss_service.html
+++ b/ss_service.html
@@ -12,7 +12,7 @@
     <div id="header"></div>
 
     <!--container -->
-    <img width="100%" src="images/locks/cloud_lock.jpg">
+    <img width="100%" src="images/locks/ss_service.jpg">
 
     <!--page bar 所在位置-->
     <!--page bar 所在位置-->
