--- a/lock_jr5_std.html
+++ b/lock_jr5_std.html
@@ -184,5 +184,6 @@
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/swiper-3.3.1.jquery.min.js"></script>
     <script src="scripts/load.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
