update ie7 style

--- a/download.html
+++ b/download.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"/>
+
     <title>软件加密狗_加密锁_授权管理_云加密|云授权平台-北京深思数盾</title>
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/swiper-3.3.1.min.css">
+    <!--[if lt IE 9]>     <script src="scripts/html5shiv.min.js"></script>     <![endif]-->
     <script charset="utf-8" type="text/javascript" src="http://wpa.b.qq.com/cgi/wpa.php?key=XzkzODA1NDQ1OF8zNTQwMDNfNDAwNjUwNjcwMV8"></script>
 </head>
 <body>
