--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>软件加密狗_加密锁_授权管理_云加密|云授权平台-北京深思数盾</title>
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/swiper-3.3.1.min.css">
+    <!--[if lt IE 9]>
+        <script src="scripts/html5shiv.min.js"></script>
+    <![endif]-->
     <script charset="utf-8" type="text/javascript" src="http://wpa.b.qq.com/cgi/wpa.php?key=XzkzODA1NDQ1OF8zNTQwMDNfNDAwNjUwNjcwMV8"></script>
 </head>
 <body>
@@ -18,7 +19,7 @@
                     <div class="sn-si-title">
                         <p>深思安全授权平台</p>
                         <p>顶级安全技术全自动加密引擎远离盗版</p>
-                        <a href="javascript:void(0);" class="reg-btn js_location_url" data-url="register">免费注册</a>
+                        <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn " >免费注册</a>
                     </div>
                     <img src="images/slides/1.png">
                 </div>
@@ -28,7 +29,7 @@
                     <div class="sn-si-title">
                         <p>深思安全授权平台</p>
                         <p>即时授权 提升用户体验<br/> 软件保护“零成本”</p>
-                        <a href="javascript:void(0);" class="reg-btn js_location_url" data-url="register">免费注册</a>
+                        <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn " >免费注册</a>
                     </div>
                     <img src="images/slides/2.png">
                 </div>
@@ -38,7 +39,7 @@
                     <div class="sn-si-title">
                         <p>深思安全授权平台</p>
                         <p>精准掌握所有软件授权使用情况 </p>
-                        <a href="javascript:void(0);" class="reg-btn js_location_url" data-url="register">免费注册</a>
+                        <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn" >免费注册</a>
                     </div>
                     <img src="images/slides/3.png">
                 </div>
@@ -48,7 +49,7 @@
                     <div class="sn-si-title">
                         <p>深思安全授权平台</p>
                         <p>顶级安全技术全自动加密引擎 远离盗版</p>
-                        <a href="javascript:void(0);" class="reg-btn js_location_url" data-url="register">免费注册</a>
+                        <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn " >免费注册</a>
                     </div>
                     <img src="images/slides/4.png">
                 </div>
