--- a/lock_jr5_std.html
+++ b/lock_jr5_std.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"/>
     <title>软件加密狗_加密锁_授权管理_云加密|云授权平台-北京深思数盾</title>
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/swiper-3.3.1.min.css">
+    <!--[if lt IE 9]>     <script src="scripts/html5shiv.min.js"></script>     <![endif]-->
     <script charset="utf-8" type="text/javascript" src="http://wpa.b.qq.com/cgi/wpa.php?key=XzkzODA1NDQ1OF8zNTQwMDNfNDAwNjUwNjcwMV8"></script>
 </head>
 <body>
@@ -122,36 +122,38 @@
                     </table>
                 </div>
                 <div id="tab_3" class="sn-tab-pane ">
-                    <p class="sn-ld-section-title">基本信息</p>
-                    <div class="sn-input-inline margin-t-20">
-                        <div class="sn-input-group">
-                            <label>姓名：</label>
-                            <input type="text" placeholder="请填写您的真实姓名">
+                    <p class="sn-ld-section-title ">基本信息</p>
+                    <div class="clear-fix margin-t-20">
+                        <div class="sn-input-inline">
+                            <div class="sn-input-group">
+                                <label>姓名：</label>
+                                <input type="text" placeholder="请填写您的真实姓名">
+                            </div>
                         </div>
-                    </div>
-                    <div class="sn-input-inline">
-                        <div class="sn-input-group">
-                            <label>邮箱：</label>
-                            <input type="text" placeholder="请填写您的真实邮箱">
+                        <div class="sn-input-inline">
+                            <div class="sn-input-group">
+                                <label>邮箱：</label>
+                                <input type="text" placeholder="请填写您的真实邮箱">
+                            </div>
                         </div>
-                    </div>
-                    <div class="sn-input-inline">
-                        <div class="sn-input-group">
-                            <label>电话：</label>
-                            <input type="text" placeholder="请填写您的有效电话">
+                        <div class="sn-input-inline">
+                            <div class="sn-input-group">
+                                <label>电话：</label>
+                                <input type="text" placeholder="请填写您的有效电话">
+                            </div>
                         </div>
-                    </div>
-                    <div class="sn-input-inline">
-                        <div class="sn-input-group">
-                            <label class="width-80">公司名称：</label>
-                            <input type="text" placeholder="请填写您的公司名称">
+                        <div class="sn-input-inline">
+                            <div class="sn-input-group">
+                                <label class="width-80">公司名称：</label>
+                                <input type="text" placeholder="请填写您的公司名称">
+                            </div>
                         </div>
                     </div>
 
                     <p class="sn-ld-section-title margin-t-20">申请使用的产品</p>
                     <p class="margin-t-20">精锐5-试用版</p>
                     <p class="sn-ld-section-title margin-t-20">软件的类别</p>
-                    <div class="sn-input-group margin-t-20">
+                    <div class="sn-input-group height-45 margin-t-20">
                         <input type="text" placeholder="请填写您的软件类别，例如：游戏软件">
                     </div>
                     <p class="sn-ld-section-title">您对加密锁的要求</p>
@@ -184,6 +186,5 @@
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/swiper-3.3.1.jquery.min.js"></script>
     <script src="scripts/load.js"></script>
-    <script src="scripts/main.js"></script>
 </body>
 </html>
