--- a/we_property.html
+++ b/we_property.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"/>
     <title>软件加密狗_加密锁_授权管理_云加密|云授权平台-北京深思数盾</title>
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/swiper-3.3.1.min.css">
+    <link href="styles/main.css" type="text/css" rel="stylesheet" />
+    <!--[if lt IE 9]>
+        <script src="scripts/html5shiv.min.js"></script>
+    <![endif]-->
     <script charset="utf-8" type="text/javascript" src="http://wpa.b.qq.com/cgi/wpa.php?key=XzkzODA1NDQ1OF8zNTQwMDNfNDAwNjUwNjcwMV8"></script>
 </head>
 <body>
@@ -14,40 +16,40 @@
     <!--<img width="100%" src="images/sense.jpg">-->
     <img width="100%" src="images/update_imgs/clock.jpg">
     <!--page bar 所在位置-->
-    <section class="sn-page-bar">
+    <div class="sn-page-bar">
 
         <div class="wrap text-left sn-pb-content">
             <span>您现在的位置：</span>
             <span>我们</span> <span>></span>
             <span class="active">公司资质</span>
         </div>
-    </section>
+    </div>
 
     <!--container list-->
-    <section class="text-left">
+    <div class="text-left">
         <div class="wrap sn-big-title color-blue">
             公司资质
         </div>
-    </section>
+    </div>
 
-    <section class="sn-we-ipr margin-t-20">
-        <div class="wrap clear-fix">
+    <div class="sn-we-ipr margin-t-20">
+        <div class="wrap clear-fix ">
             <ul class="swi-list property-list">
                 <li>
                     <div class="swi-pic">
-                        <img src="images/certificate/15.jpg">
+                        <img src="images/certificate/15.jpg" >
                     </div>
                     <div class="swi-desc">商品密码产品生产定点单位证书</div>
                 </li>
                 <li>
                     <div class="swi-pic">
-                        <img src="images/certificate/1.jpg">
+                        <img src="images/certificate/1.jpg"  >
                     </div>
                     <div class="swi-desc">软件企业认定证书</div>
                 </li>
                 <li>
                     <div class="swi-pic">
-                        <img src="images/certificate/2.jpg">
+                        <img src="images/certificate/2.jpg" >
                     </div>
                     <div class="swi-desc">中关村高新技术企业</div>
                 </li>
@@ -125,7 +127,7 @@
                 </li>
             </ul>
         </div>
-    </section>
+    </div>
 
     <div id="footer"></div>
     <script src="scripts/jquery.min.js"></script>
