--- a/company_intro.html
+++ b/company_intro.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"/>
+    <!--[if lt IE 9]>
+    <script src="scripts/html5shiv.min.js"></script>
+    <![endif]-->
     <title>软件加密狗_加密锁_授权管理_云加密|云授权平台-北京深思数盾</title>
     <link rel="stylesheet" href="styles/font-awesome.css">
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/swiper-3.3.1.min.css">
+
     <script charset="utf-8" type="text/javascript" src="http://wpa.b.qq.com/cgi/wpa.php?key=XzkzODA1NDQ1OF8zNTQwMDNfNDAwNjUwNjcwMV8"></script>
 </head>
 <body>
@@ -33,10 +36,10 @@
     <section class="sn-we-news border-bottom-grey text-left">
         <div class="wrap clear-fix ">
             <p class="sn-wen-content">
-                北京深思数盾科技股份有限公司注册成立于2013年3月，位于北京市海淀区，实际注册资本2000万，是一家专注于软件授权保护、互联网授权服务和安全产品开发的创新性科技企业。
-                深思的核心产品是“深思云授权平台”，目标是协助中国的软件企业向以用户为中心的互联网模式转变。在为软件企业和中小型软件开发团队带来更广阔的发展空间的同时，也为软件的使用者带来了更佳的使用体验。
-                深思的愿景是成为“企业数据财富的保护者”，在财富快速数字化的互联网时代，致力于保护企业客户的数据财富安全，特别是软件企业的软件产品以及各型企业在云端存储和使用的商业数据。2016年初深思完成了一次定向融资，开始进入新一轮的快速发展轨道。
-                深思在软件保护、互联网安全、硬件安全产品领域具有深厚的技术积累，2013年公司注册时，整合了具有近20年发展历史的深思洛克的全部软件加密锁业务和完整的技术团队。凭借卓越的技术和诚实守信的口碑，深思成为了用友、广联达、金蝶、北大方正、科大讯飞、H3C、和利时、海康威视等一大批国内软件行业领导者的长期合作伙伴，也为摩托罗拉、索尼、西门子、NEC等国际知名企业提供产品和服务。全球有超过5000家软件企业累计使用了超过1300万套深思产品，其中智能卡产品超过1000万套。
+北京深思数盾科技股份有限公司注册成立于2013年3月，位于北京市海淀区，实际注册资本2000万，是一家专注于软件授权保护、互联网授权服务和安全产品开发的创新性科技企业。
+深思的核心产品是“深思云授权平台”，目标是协助中国的软件企业向以用户为中心的互联网模式转变。在为软件企业和中小型软件开发团队带来更广阔的发展空间的同时，也为软件的使用者带来了更佳的使用体验。
+深思的愿景是成为“企业数据财富的保护者”，在财富快速数字化的互联网时代，致力于保护企业客户的数据财富安全，特别是软件企业的软件产品以及各型企业在云端存储和使用的商业数据。2016年初深思完成了一次定向融资，开始进入新一轮的快速发展轨道。
+深思在软件保护、互联网安全、硬件安全产品领域具有深厚的技术积累，2013年公司注册时，整合了具有近20年发展历史的深思洛克的全部软件加密锁业务和完整的技术团队。凭借卓越的技术和诚实守信的口碑，深思成为了用友、广联达、金蝶、北大方正、科大讯飞、H3C、和利时、海康威视等一大批国内软件行业领导者的长期合作伙伴，也为摩托罗拉、索尼、西门子、NEC等国际知名企业提供产品和服务。全球有超过5000家软件企业累计使用了超过1300万套深思产品，其中智能卡产品超过1000万套。
 
             </p>
         </div>
@@ -50,22 +53,22 @@
 
     <section class="sn-we-news   text-left">
         <div class="wrap clear-fix ">
-            <p class="sn-wen-content">
-                <span class="bolder font-size-24">可信赖的专业技术伙伴</span>
-                <span class="color-blue font-size-18">价值观：</span>
-                1.真心诚意尊重、善待每一个人，努力做得更好以对得起自己、同事和家人；
-                2.正道经营；
-                3.成就客户、成就自我；
-                4.围绕客户的需求持续创新；
-                5.永存变革之心，不断突破自我；
-                6.坚持奋斗精神，为奋斗者创造更好的发展空间，使奋斗者得合理回报。
+            <p class="sn-wen-content preWrap">
+<span class="bolder font-size-24">可信赖的专业技术伙伴</span>
+<span class="color-blue font-size-18">价值观：</span>
+1.真心诚意尊重、善待每一个人，努力做得更好以对得起自己、同事和家人；
+2.正道经营；
+3.成就客户、成就自我；
+4.围绕客户的需求持续创新；
+5.永存变革之心，不断突破自我；
+6.坚持奋斗精神，为奋斗者创造更好的发展空间，使奋斗者得合理回报。
 
-                <span class="color-blue font-size-18">使命：</span>
-                1.为中小企业提供最好的数据财富保护产品与服务，为中小企业的健康成长保驾护航；
-                2.追求全体员工物质和精神两方面的幸福。
+<span class="color-blue font-size-18">使命：</span>
+1.为中小企业提供最好的数据财富保护产品与服务，为中小企业的健康成长保驾护航；
+2.追求全体员工物质和精神两方面的幸福。
 
-                <span class="color-blue font-size-18">愿景 :</span>
-                中小企业数据财富的保护者
+<span class="color-blue font-size-18">愿景 :</span>
+中小企业数据财富的保护者
             </p>
         </div>
     </section>
