--- a/news.html
+++ b/news.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>软件加密狗_加密锁_授权管理_云加密|云授权平台-北京深思数盾</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"/>
+    <!--[if lt IE 9]>
+        <script src="scripts/html5shiv.min.js"></script>
+    <![endif]-->
     <link rel="stylesheet" href="styles/font-awesome.css">
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/swiper-3.3.1.min.css">
     <script charset="utf-8" type="text/javascript" src="http://wpa.b.qq.com/cgi/wpa.php?key=XzkzODA1NDQ1OF8zNTQwMDNfNDAwNjUwNjcwMV8"></script>
 </head>
 <body>
@@ -32,115 +34,113 @@
 
     <section class="sn-we-rct margin-t-20">
         <div class="wrap clear-fix text-left min-height-400">
-            <ul class="sn-wr-list">
-                <a href="news_detail.html?id=1" data-url="news_detail" class="js_location_url">
-                    <li>
+            <ul class="sn-wrn-list">
+                <li>
+                    <a href="news_detail.html?id=1" >
                         <div class="sn-wrl-head circle">
                             <span class="sn-wlh-title"><i class="icon-circle"></i>3.21 新序幕拉开,深思与您不见不散! </span>
                             <span class="sn-wlh-time"></span>
                         </div>
                         <div class="sn-wrl-desc"></div>
-                    </li>
-                </a>
-                <a href="news_detail.html?id=2" data-url="news_detail" class="js_location_url">
-                    <li>
+                    </a>
+                </li>
+                <li>
+                    <a href="news_detail.html?id=2" >
                         <div class="sn-wrl-head circle">
                             <span class="sn-wlh-title"><i class="icon-circle"></i>深思数盾加密锁产品通过CE和FCC认证</span>
                             <span class="sn-wlh-time"></span>
                         </div>
                         <div class="sn-wrl-desc"></div>
-                    </li>
-                </a>
-                <a href="news_detail.html?id=3" data-url="news_detail" class="js_location_url">
-                    <li>
-                        <div class="sn-wrl-head circle">
-                            <span class="sn-wlh-title"><i class="icon-circle"></i>互联网+ 重新定义加密锁</span>
-                            <span class="sn-wlh-time"></span>
-                        </div>
-                        <div class="sn-wrl-desc"></div>
-                    </li>
-                </a>
-                <a href="news_detail.html?id=4" data-url="news_detail" class="js_location_url">
-                    <li>
-                        <div class="sn-wrl-head circle">
-                            <span class="sn-wlh-title"><i class="icon-circle"></i>关于“非正规渠道购买的深思产品无技术支持和售后服务”的通知</span>
-                            <span class="sn-wlh-time"></span>
-                        </div>
-                        <div class="sn-wrl-desc"></div>
-                    </li>
-                </a>
-                <a href="news_detail.html?id=5" data-url="news_detail" class="js_location_url">
-                    <li>
-                        <div class="sn-wrl-head circle">
-                            <span class="sn-wlh-title"><i class="icon-circle"></i>热烈庆祝深思喜获北京市专利示范单位</span>
-                            <span class="sn-wlh-time"></span>
-                        </div>
-                        <div class="sn-wrl-desc"></div>
-                    </li>
-                </a>
-                <a href="news_detail.html?id=6" data-url="news_detail" class="js_location_url">
-                    <li>
-                        <div class="sn-wrl-head circle">
-                            <span class="sn-wlh-title"><i class="icon-circle"></i>深思喜获国家政府专利促进资金</span>
-                            <span class="sn-wlh-time"></span>
-                        </div>
-                        <div class="sn-wrl-desc"></div>
-                    </li>
-                </a>
-                <a href="news_detail.html?id=7" data-url="news_detail" class="js_location_url">
-                    <li>
-                        <div class="sn-wrl-head circle">
-                            <span class="sn-wlh-title"><i class="icon-circle"></i>深思再次获得国家密码管理局商用密码产品生产定点单位资质</span>
-                            <span class="sn-wlh-time"></span>
-                        </div>
-                        <div class="sn-wrl-desc"></div>
-                    </li>
-                </a>
-                <a href="news_detail.html?id=8" data-url="news_detail" class="js_location_url">
-                    <li>
-                        <div class="sn-wrl-head circle">
-                            <span class="sn-wlh-title"><i class="icon-circle"></i>深思的发明项目获得巴黎国际发明展览会（列宾竞赛）铜奖</span>
-                            <span class="sn-wlh-time"></span>
-                        </div>
-                        <div class="sn-wrl-desc"></div>
-                    </li>
-                </a>
-                <a href="news_detail.html?id=9" data-url="news_detail" class="js_location_url">
-                    <li>
-                        <div class="sn-wrl-head circle">
-                            <span class="sn-wlh-title"><i class="icon-circle"></i>深思喜获中关村企业信用等级Azc级</span>
-                            <span class="sn-wlh-time"></span>
-                        </div>
-                        <div class="sn-wrl-desc"></div>
-                    </li>
-                </a>
-                <a href="news_detail.html?id=10" data-url="news_detail" class="js_location_url">
-                    <li>
-                        <div class="sn-wrl-head circle">
-                            <span class="sn-wlh-title"><i class="icon-circle"></i>深思项目列入《国家高新技术产业发展项目计划》，并获得专项扶持资金</span>
-                            <span class="sn-wlh-time"></span>
-                        </div>
-                        <div class="sn-wrl-desc"></div>
-                    </li>
-                </a>
-                <a href="news_detail.html?id=11" data-url="news_detail" class="js_location_url">
-                    <li>
-                        <div class="sn-wrl-head circle">
-                            <span class="sn-wlh-title"><i class="icon-circle"></i>
-                                用友续签深思洛克，精锐护航软件保护</span>
-                            <span class="sn-wlh-time"></span>
-                        </div>
-                        <div class="sn-wrl-desc"></div>
-                    </li>
-                </a>
-
+                    </a>
+                </li>
+                <li>
+                    <a href="news_detail.html?id=3" >
+                            <div class="sn-wrl-head circle">
+                                <span class="sn-wlh-title"><i class="icon-circle"></i>互联网+ 重新定义加密锁</span>
+                                <span class="sn-wlh-time"></span>
+                            </div>
+                            <div class="sn-wrl-desc"></div>
+                    </a>
+                </li>
+                <li>
+                    <a href="news_detail.html?id=4" >
+                            <div class="sn-wrl-head circle">
+                                <span class="sn-wlh-title"><i class="icon-circle"></i>关于“非正规渠道购买的深思产品无技术支持和售后服务”的通知</span>
+                                <span class="sn-wlh-time"></span>
+                            </div>
+                            <div class="sn-wrl-desc"></div>
+                    </a>
+                </li>
+                <li>
+                    <a href="news_detail.html?id=5" >
+                            <div class="sn-wrl-head circle">
+                                <span class="sn-wlh-title"><i class="icon-circle"></i>热烈庆祝深思喜获北京市专利示范单位</span>
+                                <span class="sn-wlh-time"></span>
+                            </div>
+                            <div class="sn-wrl-desc"></div>
+                    </a>
+                </li>
+                <li>
+                    <a href="news_detail.html?id=6" >
+                            <div class="sn-wrl-head circle">
+                                <span class="sn-wlh-title"><i class="icon-circle"></i>深思喜获国家政府专利促进资金</span>
+                                <span class="sn-wlh-time"></span>
+                            </div>
+                            <div class="sn-wrl-desc"></div>
+                    </a>
+                </li>
+                <li>
+                    <a href="news_detail.html?id=7" >
+                            <div class="sn-wrl-head circle">
+                                <span class="sn-wlh-title"><i class="icon-circle"></i>深思再次获得国家密码管理局商用密码产品生产定点单位资质</span>
+                                <span class="sn-wlh-time"></span>
+                            </div>
+                            <div class="sn-wrl-desc"></div>
+                    </a>
+                </li>
+                <li>
+                    <a href="news_detail.html?id=8" >
+                            <div class="sn-wrl-head circle">
+                                <span class="sn-wlh-title"><i class="icon-circle"></i>深思的发明项目获得巴黎国际发明展览会（列宾竞赛）铜奖</span>
+                                <span class="sn-wlh-time"></span>
+                            </div>
+                            <div class="sn-wrl-desc"></div>
+                    </a>
+                </li>
+                <li>
+                    <a href="news_detail.html?id=9" >
+                            <div class="sn-wrl-head circle">
+                                <span class="sn-wlh-title"><i class="icon-circle"></i>深思喜获中关村企业信用等级Azc级</span>
+                                <span class="sn-wlh-time"></span>
+                            </div>
+                            <div class="sn-wrl-desc"></div>
+                    </a>
+                </li>
+                <li>
+                    <a href="news_detail.html?id=10" >
+                            <div class="sn-wrl-head circle">
+                                <span class="sn-wlh-title"><i class="icon-circle"></i>深思项目列入《国家高新技术产业发展项目计划》，并获得专项扶持资金</span>
+                                <span class="sn-wlh-time"></span>
+                            </div>
+                            <div class="sn-wrl-desc"></div>
+                    </a>
+                </li>
+                <li>
+                    <a href="news_detail.html?id=11" >
+                            <div class="sn-wrl-head circle">
+                                <span class="sn-wlh-title"><i class="icon-circle"></i>
+                                    用友续签深思洛克，精锐护航软件保护</span>
+                                <span class="sn-wlh-time"></span>
+                            </div>
+                            <div class="sn-wrl-desc"></div>
+                    </a>
+                </li>
             </ul>
         </div>
     </section>
 
     <div id="footer"></div>
     <script src="scripts/jquery.min.js"></script>
-    <script src="scripts/swiper-3.3.1.jquery.min.js"></script>
     <script src="scripts/load.js"></script>
 </body>
 </html>
