--- a/we_intellectual.html
+++ b/we_intellectual.html
@@ -1,45 +1,44 @@
-<!DOCTYPE html>
-<html lang="zh-cn">
+<!DOCTYPE HTML>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>软件加密狗_加密锁_授权管理_云加密|云授权平台-北京深思数盾</title>
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/swiper-3.3.1.min.css">
+    <!--[if lt IE 9]>
+    <script src="scripts/html5shiv.min.js"></script>
+    <![endif]-->
+    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"/>
+    <link type="text/css"  rel="stylesheet" href="styles/main.css" >
     <script charset="utf-8" type="text/javascript" src="http://wpa.b.qq.com/cgi/wpa.php?key=XzkzODA1NDQ1OF8zNTQwMDNfNDAwNjUwNjcwMV8"></script>
 </head>
 <body>
     <div id="header"></div>
-    <!--container -->
-    <!--<img width="100%" src="images/sense.jpg">-->
-    <img width="100%" src="images/update_imgs/clock.jpg">
+    <img width="100%" src="images/update_imgs/clock.jpg" />
 
     <!--page bar 所在位置-->
-    <section class="sn-page-bar">
+    <div class="sn-page-bar">
 
         <div class="wrap text-left sn-pb-content">
             <span>您现在的位置：</span>
             <span>我们</span> <span>></span>
             <span class="active">知识产权</span>
         </div>
-    </section>
+    </div>
 
     <!--container list-->
-    <section class="text-left">
+    <div class="text-left">
         <div class="wrap sn-big-title color-blue">
             知识产权
         </div>
-    </section>
+    </div>
 
-    <section class="sn-we-ipr">
-        <div class="wrap clear-fix">
+    <div class="sn-we-ipr text-left">
+        <div class="wrap clear-fix ">
             <div class="sn-sub-title margin-t-20 text-left">
                 北京深思数盾是北京市知识产权保护协会会员。掌握信息安全保护领域自有核心技术 , 专业提供软件版权保护产品及信息安全服务 , 具备软硬件自主研发、生产、销售于一体的高新技术企业。 自成立以来已经申请了200多项专利 , 其中已经有近100项已经获得了国家授权 ,  多次获得北京市专利试点企业和专利促进资金支持。
             </div>
             <ul class="swi-list">
-                <li>
+                <li >
                     <div class="swi-pic">
-                        <img src="images/ipr/1.jpg">
+                        <img src="images/ipr/1.jpg" />
                     </div>
                     <div class="swi-desc">
                         专利号：ZL 2012 1 0384792.8
@@ -47,7 +46,7 @@
                 </li>
                 <li>
                     <div class="swi-pic">
-                        <img src="images/ipr/1.jpg">
+                        <img src="images/ipr/1.jpg" >
                     </div>
                     <div class="swi-desc">
                         专利号：ZL 2012 1 0344786.X
@@ -103,7 +102,7 @@
                 </li>
             </ul>
         </div>
-    </section>
+    </div>
 
     <div id="footer"></div>
     <script src="scripts/jquery.min.js"></script>
