--- a/index.html
+++ b/index.html
@@ -3,61 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>软件加密狗_加密锁_授权管理_云加密|云授权平台-北京深思数盾</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"/>
     <!--[if lt IE 9]>
-        <script src="scripts/html5shiv.min.js"></script>
+    <script src="scripts/html5shiv.min.js"></script>
     <![endif]-->
+    <link type="text/css" rel="stylesheet" href="styles/main.css">
+    <link type="text/css" rel="stylesheet" href="libs/bxslider/jquery.bxslider.css">
+
     <script charset="utf-8" type="text/javascript" src="http://wpa.b.qq.com/cgi/wpa.php?key=XzkzODA1NDQ1OF8zNTQwMDNfNDAwNjUwNjcwMV8"></script>
 </head>
 <body>
     <div id="header"></div>
     <!--轮播图-->
-    <div class="swiper-container swiper-slide-container ">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide ">
+    <div class="sn-slide-section">
+        <ul class="sn_bxslider">
+            <li>
                 <div class="sn-swiper-item">
-                    <div class="sn-si-title">
-                        <p>深思安全授权平台</p>
-                        <p>顶级安全技术全自动加密引擎远离盗版</p>
-                        <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn " >免费注册</a>
-                    </div>
-                    <img src="images/slides/1.png">
+                    <p>深思安全授权平台</p>
+                    <p>顶级安全技术全自动加密引擎远离盗版</p>
+                    <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn " >免费注册</a>
                 </div>
-            </div>
-            <div class="swiper-slide  ">
+                <img src="images/slides/1.png">
+            </li>
+            <li>
                 <div class="sn-swiper-item">
-                    <div class="sn-si-title">
-                        <p>深思安全授权平台</p>
-                        <p>即时授权 提升用户体验<br/> 软件保护“零成本”</p>
-                        <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn " >免费注册</a>
-                    </div>
-                    <img src="images/slides/2.png">
+                    <p>深思安全授权平台</p>
+                    <p>即时授权 提升用户体验<br/> 软件保护“零成本”</p>
+                    <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn " >免费注册</a>
                 </div>
-            </div>
-            <div class="swiper-slide  ">
+                <img src="images/slides/2.png">
+            </li>
+            <li class="">
                 <div class="sn-swiper-item">
-                    <div class="sn-si-title">
-                        <p>深思安全授权平台</p>
-                        <p>精准掌握所有软件授权使用情况 </p>
-                        <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn" >免费注册</a>
-                    </div>
-                    <img src="images/slides/3.png">
+                    <p>深思安全授权平台</p>
+                    <p>精准掌握所有软件授权使用情况 </p>
+                    <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn" >免费注册</a>
                 </div>
-            </div>
-            <div class="swiper-slide">
+                <img src="images/slides/3.png">
+            </li>
+            <li class="">
                 <div class="sn-swiper-item">
-                    <div class="sn-si-title">
-                        <p>深思安全授权平台</p>
-                        <p>顶级安全技术全自动加密引擎 远离盗版</p>
-                        <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn " >免费注册</a>
-                    </div>
-                    <img src="images/slides/4.png">
+                    <p>深思安全授权平台</p>
+                    <p>顶级安全技术全自动加密引擎 远离盗版</p>
+                    <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn " >免费注册</a>
                 </div>
-            </div>
-        </div>
-        <div class="swiper-pagination"></div>
-        <div class="swiper-button-prev sn-pre-btn"></div>
-        <div class="swiper-button-next sn-next-btn"></div>
+                <img src="images/slides/4.png">
+            </li>
+        </ul>
     </div>
 
     <!--container-->
@@ -188,59 +180,65 @@
     <section class="sn-partners">
         <div class="wrap clear-fix">
             <p class="sm-p-title">我们的合作伙伴</p>
-            <div class="">
-
-            </div>
-            <div class="swiper-container sn-partners-slide">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide ">
-                        <div class="sn-swiper-item-2">
+            <div class="sn-partners-slide">
+                <ul class="sn_partners_slide">
+                    <li class=" ">
+                        <div class="sn-partners-item">
                             <a href="http://www.kingdee.gs.cn" target="_blank"><img src="images/partners/1.png"></a>
                         </div>
-                    </div>
-                    <div class="swiper-slide  ">
-                        <div class="sn-swiper-item-2">
+                    </li>
+                    <li class="  ">
+                        <div class="sn-partners-item">
                             <a href="http://www.yonyou.com" target="_blank"><img src="images/partners/2.png"></a>
                         </div>
-                    </div>
-                    <div class="swiper-slide  ">
-                        <div class="sn-swiper-item-2">
+                    </li>
+                    <li class="  ">
+                        <div class="sn-partners-item">
                             <a href="http://www.siemens.com/entry/cn/zh/" target="_blank"><img src="images/partners/3.png"></a>
                         </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="sn-swiper-item-2">
+                    </li>
+                    <li class="">
+                        <div class="sn-partners-item">
                             <a href="http://www.sony.com.cn" target="_blank"><img src="images/partners/4.png"></a>
                         </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="sn-swiper-item-2">
+                    </li>
+                    <li class="">
+                        <div class="sn-partners-item">
                             <a href="http://www.chanjet.com" target="_blank"><img src="images/partners/5.png"></a>
                         </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="sn-swiper-item-2">
+                    </li>
+                    <li class="">
+                        <div class="sn-partners-item">
                             <a href="http://www.founder.com.cn/zh-cn/" target="_blank"><img src="images/partners/6.png"></a>
                         </div>
-                    </div>
+                    </li>
 
-                </div>
-                <div class="swiper-pagination"></div>
-                <div class="swiper-button-prev swiper-button-black"></div>
-                <div class="swiper-button-next swiper-button-black"></div>
+                </ul>
             </div>
-
-
         </div>
     </section>
 
-
-
     <div id="footer"></div>
     <script src="scripts/jquery.min.js"></script>
-    <script src="scripts/swiper-3.3.1.jquery.min.js"></script>
+    <script src="libs/bxslider/jquery.bxslider.min.js"></script>
     <script src="scripts/move.min.js"></script>
     <script src="scripts/load.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('.sn_bxslider').bxSlider({
+                auto: true,
+                mode: 'fade'
+            });
+            $('.sn_partners_slide').bxSlider({
+                infiniteLoop: false,
+                pager : false,
+                slideWidth: 180,
+                minSlides: 1,
+                maxSlides: 5,
+                slideMargin: 10
+            });
+        });
+    </script>
 
 </body>
 </html>
