--- a/we_route.html
+++ b/we_route.html
@@ -28,71 +28,88 @@
         <div class="wrap">
             <p class="sn-wr-title">成长历程</p>
             <div class="sn-wr-list">
+                <i class="sn-through-line"></i>
                 <i class="icon-self-time"></i>
-                <ul class="sn-wr-item" data-group="2016年">
-                    <li>深思软件安全二十载，面向互联网再启航</li>
-                    <li>深思数盾成为高通公司软件版权保护领域忠实合作伙伴</li>
+                <ul class="sn-wr-item">
+                    <li class="title">2016年<i class="sn-wr-arrow"></i></li>
+                    <li><i class="prefix-short-line"></i>深思软件安全二十载，面向互联网再启航</li>
+                    <li><i class="prefix-short-line"></i>深思软件安全二十载，面向互联网再启航</li>
+                    <li><i class="prefix-short-line"></i>深思数盾成为高通公司软件版权保护领域忠实合作伙伴</li>
                 </ul>
-                <ul class="sn-wr-item" data-group="2015年">
-                    <li>深思数盾加密锁产品通过CE和FCC认证</li>
-                    <li>互联网+重新定义加密锁：精锐5加密锁产品问世</li>
+                <ul class="sn-wr-item" >
+                    <li class="title">2015年<i class="sn-wr-arrow"></i></li>
+                    <li><i class="prefix-short-line"></i>深思数盾加密锁产品通过CE和FCC认证</li>
+                    <li><i class="prefix-short-line"></i>互联网+重新定义加密锁：精锐5加密锁产品问世</li>
                 </ul>
-                <ul class="sn-wr-item" data-group="2014年">
-                    <li>深思将32位ARM全球最强芯片用到加密锁，精锐4S—全球第一款 CC EAL5+ 和 EMVo双重安全标准的加密锁诞生</li>
-                    <li>再次获得了二项发明专利及二项实用新型专利</li>
-                    <li>让专业更专注，深思助力科大讯飞智能语音及语言技术研究安全性能提升</li>
-                    <li>深思助力海康威视实现视频处理技术和视频分析技术的版权保护</li>
+                <ul class="sn-wr-item" >
+                    <li class="title">2014年<i class="sn-wr-arrow"></i></li>
+                    <li><i class="prefix-short-line"></i>深思将32位ARM全球最强芯片用到加密锁，精锐4S—全球第一款 CC EAL5+ 和 EMVo双重安全标准的加密锁诞生</li>
+                    <li><i class="prefix-short-line"></i>再次获得了二项发明专利及二项实用新型专利</li>
+                    <li><i class="prefix-short-line"></i>让专业更专注，深思助力科大讯飞智能语音及语言技术研究安全性能提升</li>
+                    <li><i class="prefix-short-line"></i>深思助力海康威视实现视频处理技术和视频分析技术的版权保护</li>
                 </ul>
-                <ul class="sn-wr-item" data-group="2013年">
-                    <li>新的售后服务体系开始运行</li>
-                    <li>深思全球客户总数突破5000家</li>
-                    <li>获北京市专利示范单位</li>
+                <ul class="sn-wr-item" >
+                    <li class="title">2013年<i class="sn-wr-arrow"></i></li>
+                    <li><i class="prefix-short-line"></i>新的售后服务体系开始运行</li>
+                    <li><i class="prefix-short-line"></i>深思全球客户总数突破5000家</li>
+                    <li><i class="prefix-short-line"></i>获北京市专利示范单位</li>
                 </ul>
-                <ul class="sn-wr-item" data-group="2012年">
-                    <li>获北京市中小企业国际开拓资金支持</li>
-                    <li>获国家火炬计划产业示范项目证书</li>
-                    <li>获北京市海淀区专利专项资助资金</li>
-                    <li>获信用评级A级单位</li>
+                <ul class="sn-wr-item" >
+                    <li class="title">2012年<i class="sn-wr-arrow"></i></li>
+                    <li><i class="prefix-short-line"></i>获北京市中小企业国际开拓资金支持</li>
+                    <li><i class="prefix-short-line"></i>获国家火炬计划产业示范项目证书</li>
+                    <li><i class="prefix-short-line"></i>获北京市海淀区专利专项资助资金</li>
+                    <li><i class="prefix-short-line"></i>获信用评级A级单位</li>
                 </ul>
-                <ul class="sn-wr-item" data-group="2011年">
-                    <li>获中关村2011年度专利商标促进资金支持</li>
-                    <li>入选中国绿色电子产品生产企业</li>
-                    <li>获巴黎国际发明展览会（列宾竞赛）铜奖</li>
+                <ul class="sn-wr-item" >
+                    <li class="title">2011年<i class="sn-wr-arrow"></i></li>
+                    <li><i class="prefix-short-line"></i>获中关村2011年度专利商标促进资金支持</li>
+                    <li><i class="prefix-short-line"></i>入选中国绿色电子产品生产企业</li>
+                    <li><i class="prefix-short-line"></i>获巴黎国际发明展览会（列宾竞赛）铜奖</li>
                 </ul>
-                <ul class="sn-wr-item" data-group="2010年">
-                    <li>成为北京市知识产权保护协会会员</li>
-                    <li>获得海淀区科技项目（基本计划）资金支持</li>
-                    <li>在研项目列入《国家高新技术产业发展项目计划》，并获得专项扶持资金800万</li>
-                    <li>与清华大学合作成立“清华-深思图像识别与高速图像处理联合研究中心”</li>
+                <ul class="sn-wr-item" >
+                    <li class="title">2010年<i class="sn-wr-arrow"></i></li>
+                    <li><i class="prefix-short-line"></i>成为北京市知识产权保护协会会员</li>
+                    <li><i class="prefix-short-line"></i>获得海淀区科技项目（基本计划）资金支持</li>
+                    <li><i class="prefix-short-line"></i>在研项目列入《国家高新技术产业发展项目计划》，并获得专项扶持资金800万</li>
+                    <li><i class="prefix-short-line"></i>与清华大学合作成立“清华-深思图像识别与高速图像处理联合研究中心”</li>
                 </ul>
-                <ul class="sn-wr-item" data-group="2009年">
-                    <li>获国家高新技术企业认证</li>
-                    <li>获得专利促进资金支持</li>
+                <ul class="sn-wr-item" >
+                    <li class="title">2009年<i class="sn-wr-arrow"></i></li>
+                    <li><i class="prefix-short-line"></i>获国家高新技术企业认证</li>
+                    <li><i class="prefix-short-line"></i>获得专利促进资金支持</li>
                 </ul>
-                <ul class="sn-wr-item" data-group="2007年">
-                    <li>获科技部中小企业创新基金80万元无偿资助</li>
-                    <li>获中关村创新基金45万元无偿资助</li>
-                    <li>获“软件中国2006年度风云榜”活动“十大最具创新性技术”奖</li>
-                    <li>获软件企业资格认定</li>
+                <ul class="sn-wr-item" >
+                    <li class="title">2007年<i class="sn-wr-arrow"></i></li>
+                    <li><i class="prefix-short-line"></i>获科技部中小企业创新基金80万元无偿资助</li>
+                    <li><i class="prefix-short-line"></i>获中关村创新基金45万元无偿资助</li>
+                    <li><i class="prefix-short-line"></i>获“软件中国2006年度风云榜”活动“十大最具创新性技术”奖</li>
+                    <li><i class="prefix-short-line"></i>获软件企业资格认定</li>
                 </ul>
-                <ul class="sn-wr-item" data-group="2006年">
-                    <li>入选中关村“瞪羚计划”成为“瞪羚”企业</li>
+                <ul class="sn-wr-item" >
+                    <li class="title">2006年<i class="sn-wr-arrow"></i></li>
+                    <li><i class="prefix-short-line"></i>入选中关村“瞪羚计划”成为“瞪羚”企业</li>
                 </ul>
-                <ul class="sn-wr-item" data-group="2005年">
-                    <li>首次通过ISO9001：2008认证</li>
-                    <li>软件保护解决方案获得中国软件产品认定业</li>
+                <ul class="sn-wr-item" >
+                    <li class="title">2005年<i class="sn-wr-arrow"></i></li>
+                    <li><i class="prefix-short-line"></i>首次通过ISO9001：2008认证</li>
+                    <li><i class="prefix-short-line"></i>软件保护解决方案获得中国软件产品认定业</li>
                 </ul>
-                <ul class="sn-wr-item" data-group="2003年">
-                    <li>智能卡产品通过中国金融认证中心CFCA认证</li>
+                <ul class="sn-wr-item" >
+                    <li class="title">2003年<i class="sn-wr-arrow"></i></li>
+                    <li><i class="prefix-short-line"></i>智能卡产品通过中国金融认证中心CFCA认证</li>
                 </ul>
-                <ul class="sn-wr-item" data-group="2000年">
-                    <li>产品获得中国人民共和国公安部颁发的销售许可证</li>
+                <ul class="sn-wr-item" >
+                    <li class="title">2000年<i class="sn-wr-arrow"></i></li>
+                    <li><i class="prefix-short-line"></i>产品获得中国人民共和国公安部颁发的销售许可证</li>
                 </ul>
-                <ul class="sn-wr-item" data-group="1996年">
-                    <li>参与发起中国软件联盟（CSA）</li>
+                <ul class="sn-wr-item" >
+                    <li class="title">1996年<i class="sn-wr-arrow"></i></li>
+                    <li><i class="prefix-short-line"></i>参与发起中国软件联盟（CSA）</li>
                 </ul>
-                <ul class="sn-wr-item" data-group="1995年">
-                    <li>加入北京市新技术产业开发试验区，成为高新技术产业</li>
+                <ul class="sn-wr-item" >
+                    <li class="title">1995年<i class="sn-wr-arrow"></i></li>
+                    <li><i class="prefix-short-line"></i>加入北京市新技术产业开发试验区，成为高新技术产业</li>
                 </ul>
             </div>
         </div>
@@ -100,7 +117,7 @@
 
     <div id="footer"></div>
     <script src="scripts/jquery.min.js"></script>
-    <script src="scripts/swiper-3.3.1.jquery.min.js"></script>
+
     <script src="scripts/load.js"></script>
 </body>
 </html>
