fix home switch animate

--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
     <div id="footer"></div>
     <script src="scripts/jquery.min.js"></script>
     <script src="libs/bxslider/jquery.bxslider.min.js"></script>
-    <script src="scripts/move.min.js"></script>
     <script src="scripts/load.js"></script>
+    <script src="scripts/main.js"></script>
     <script>
         $(document).ready(function () {
             $('.sn_bxslider').bxSlider({
