--- a/vp_tools.html
+++ b/vp_tools.html
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="snphc-img fl">
-                <img class="snphc-img margin-t-50" src="images/vp_tools/3.png">
+                <img class="snphc-img " src="images/vp_tools/3.png">
             </div>
         </div>
     </section>
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="snphc-img fl">
-                <img class="snphc-img margin-t-100"  src="images/vp_tools/4.png">
+                <img class="snphc-img"  src="images/vp_tools/4.png">
             </div>
         </div>
     </section>
