--- a/auth_tools.html
+++ b/auth_tools.html
@@ -15,7 +15,7 @@
 
     <!--container -->
     <!--<img width="100%" src="images/vp_tools/desc_auth.jpg">-->
-    <img width="100%" src="images/update_imgs/auth_tools.jpg">
+    <img width="100%" src="images/update_imgs/auth_tools.png">
 
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
