--- a/platform_intro.html
+++ b/platform_intro.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"/>
     <title>软件加密狗_加密锁_授权管理_云加密|云授权平台-北京深思数盾</title>
+    <!--[if lt IE 9]>
+    <script src="scripts/html5shiv.min.js"></script>
+    <![endif]-->
     <link rel="stylesheet" href="styles/main.css">
-    <!--[if lt IE 9]>     <script src="scripts/html5shiv.min.js"></script>     <![endif]-->
     <script charset="utf-8" type="text/javascript" src="http://wpa.b.qq.com/cgi/wpa.php?key=XzkzODA1NDQ1OF8zNTQwMDNfNDAwNjUwNjcwMV8"></script>
 </head>
 <body>
