--- a/su_edu.html
+++ b/su_edu.html
@@ -58,25 +58,28 @@
         <div class="wrap text-left">
             <div class="sn-cl-item">
                 <p class="sn-cli-title">背景和需求</p>
-                <p class="sn-cli-desc">教育行业软件除了软件本身需要反盗版之外，还有三个特征：
-                    • 比软件本身更重要的是“内容”的保护，如各种教程和课件等
-                    • 一些软件，对使用的时间需要严格控制，如某些考试软件必须在特定的时间段才能使用
-                    • 内容可能多地使用，如老师可能在学校、家里都使用软件进行备课
+                <p class="sn-cli-desc">
+教育行业软件除了软件本身需要反盗版之外，还有三个特征：
+• 比软件本身更重要的是“内容”的保护，如各种教程和课件等
+• 一些软件，对使用的时间需要严格控制，如某些考试软件必须在特定的时间段才能使用
+• 内容可能多地使用，如老师可能在学校、家里都使用软件进行备课
                 </p>
             </div>
             <div class="sn-cl-item">
                 <p class="sn-cli-title">解决方案</p>
-                <p class="sn-cli-desc">深思云授权管理平台是新一代的软件保护方案，在深思提供的安全方案的基础之上，着重解决了软件授权的灵活性、安全性和可获得性问题。
-                    云授权平台配套的新一代加密锁精锐 5，可以容纳 3000 条完整授权（可以同时设置限时、限次、限并发数等），每条授权又可以设置 64 个子模块，授权 ID 的命名空间超过 4 亿。每个授权都可以单独加解密数据，开发商可以将授权与被保护的“内容”相对应，对其进行单独的加解密即可完成对“内容”的保护，这无需太多的开发工作，只需要调用简单接口即可，所有的细节都由中间件、云锁或硬件锁处理。
-                    除了容量大，授权类型也极为丰富，仅时间授权就有起始时间、结束时间和时间段等多种类型，加上强大的可编程能力，可以满足各种授权需求。
-                    深思云锁和硬件锁在授权的使用上完全兼容，授权也可以在云、硬件锁之间安全转移，这就给了用户最大的自由来决定软件的使用，多地访问授权自然不在话下。
+                <p class="sn-cli-desc">
+深思云授权管理平台是新一代的软件保护方案，在深思提供的安全方案的基础之上，着重解决了软件授权的灵活性、安全性和可获得性问题。
+云授权平台配套的新一代加密锁精锐 5，可以容纳 3000 条完整授权（可以同时设置限时、限次、限并发数等），每条授权又可以设置 64 个子模块，授权 ID 的命名空间超过 4 亿。每个授权都可以单独加解密数据，开发商可以将授权与被保护的“内容”相对应，对其进行单独的加解密即可完成对“内容”的保护，这无需太多的开发工作，只需要调用简单接口即可，所有的细节都由中间件、云锁或硬件锁处理。
+除了容量大，授权类型也极为丰富，仅时间授权就有起始时间、结束时间和时间段等多种类型，加上强大的可编程能力，可以满足各种授权需求。
+深思云锁和硬件锁在授权的使用上完全兼容，授权也可以在云、硬件锁之间安全转移，这就给了用户最大的自由来决定软件的使用，多地访问授权自然不在话下。
             </div>
             <div class="sn-cl-item">
                 <p class="sn-cli-title">优势</p>
-                <p class="sn-cli-desc">• 新一代加密锁授权容量巨大，可以满足众多“内容”的保护需求
-                    • 授权类型丰富，可编程能力强，底层能满足几乎所有对授权的需求
-                    • 和硬件锁全兼容的云锁，软件用户更加自由
-                    • 开发量工作极小
+                <p class="sn-cli-desc">
+• 新一代加密锁授权容量巨大，可以满足众多“内容”的保护需求
+• 授权类型丰富，可编程能力强，底层能满足几乎所有对授权的需求
+• 和硬件锁全兼容的云锁，软件用户更加自由
+• 开发量工作极小
                 </p>
             </div>
         </div>
