--- a/su_manage.html
+++ b/su_manage.html
@@ -50,25 +50,28 @@
         <div class="wrap text-left">
             <div class="sn-cl-item">
                 <p class="sn-cli-title">背景和需求</p>
-                <p class="sn-cli-desc">管理软件通常模块众多，定制性强，且对于“云+端”的形式比其它行业软件都走得更远。这就决定了其软件保护的需求主要就是对授权的需求，例如对大量模块的授权、对客户端数量的授权等。
-                    在安全方面的开发和服务，管理软件行业更希望由安全厂商全部负责，开发商只需关注自身业务模块，在“安全”这种专业领域不要牵扯精力。
-                    在软件销售流程方面，管理软件行业正在向纯电子化发行方面转变，加密锁的生产、管理和服务越来越成为“负担”。
+                <p class="sn-cli-desc">
+管理软件通常模块众多，定制性强，且对于“云+端”的形式比其它行业软件都走得更远。这就决定了其软件保护的需求主要就是对授权的需求，例如对大量模块的授权、对客户端数量的授权等。
+在安全方面的开发和服务，管理软件行业更希望由安全厂商全部负责，开发商只需关注自身业务模块，在“安全”这种专业领域不要牵扯精力。
+在软件销售流程方面，管理软件行业正在向纯电子化发行方面转变，加密锁的生产、管理和服务越来越成为“负担”。
 
                 </p>
             </div>
             <div class="sn-cl-item">
                 <p class="sn-cli-title">解决方案</p>
-                <p class="sn-cli-desc">针对管理软件行业的需求特点，我们提供了以云授权平台＋云锁加密为主体的纯电子化授权解决方案，以精锐5加密锁为离线条件下的授权缓存。
-                    深思云锁和硬件完全兼容，授权即可以在云锁上，又可以在硬件里，所有的细节都由 SS 加密中间件负责，对开发商软件透明，开发商只需要关心授权是否可用即可，在发布和管理过程中，也只需要关心授权本身的内容，无需关心授权的介质。授权的发放完全基于公私钥加密签名体系，安全问题由深思设计实现。
-                    精锐 5 硬件性能和容量都大幅提升，可以存储 3000 个完整许可（可以同时设置限时、限次、限并发数等），每个许可又可以设置 64 个子模块，完全可以满足任何开发商的授权需求。
-                    基于以上的授权管理体系，用户希望使用什么授权介质完全可以自由选择，用户可以直接在线上使用云锁，也可以在线下使用硬件加密锁，此时直接向深思购买加密锁即可。同时，用户的授权可以在云锁和硬件锁之间自由转移，最大限度地提升用户的使用体验。
+                <p class="sn-cli-desc">
+针对管理软件行业的需求特点，我们提供了以云授权平台＋云锁加密为主体的纯电子化授权解决方案，以精锐5加密锁为离线条件下的授权缓存。
+深思云锁和硬件完全兼容，授权即可以在云锁上，又可以在硬件里，所有的细节都由 SS 加密中间件负责，对开发商软件透明，开发商只需要关心授权是否可用即可，在发布和管理过程中，也只需要关心授权本身的内容，无需关心授权的介质。授权的发放完全基于公私钥加密签名体系，安全问题由深思设计实现。
+精锐 5 硬件性能和容量都大幅提升，可以存储 3000 个完整许可（可以同时设置限时、限次、限并发数等），每个许可又可以设置 64 个子模块，完全可以满足任何开发商的授权需求。
+基于以上的授权管理体系，用户希望使用什么授权介质完全可以自由选择，用户可以直接在线上使用云锁，也可以在线下使用硬件加密锁，此时直接向深思购买加密锁即可。同时，用户的授权可以在云锁和硬件锁之间自由转移，最大限度地提升用户的使用体验。
                 </p>
             </div>
             <div class="sn-cl-item">
                 <p class="sn-cli-title">优势</p>
-                <p class="sn-cli-desc">• SS 加密中间件提供安全保护，无需开发商关心安全问题。
-                    • 强大的授权管理功能，满足各种业务需求。
-                    • 加密锁采购、设置、管理和服务工作在技术上均可外包，开发商只关心电子授权发放即可，从开发商的角度可以完全实现“去硬件化”和纯电子化发行。
+                <p class="sn-cli-desc">
+• SS 加密中间件提供安全保护，无需开发商关心安全问题。
+• 强大的授权管理功能，满足各种业务需求。
+• 加密锁采购、设置、管理和服务工作在技术上均可外包，开发商只关心电子授权发放即可，从开发商的角度可以完全实现“去硬件化”和纯电子化发行。
                 </p>
             </div>
         </div>
