fix home slide bug

--- a/header.html
+++ b/header.html
@@ -86,7 +86,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="lock_jr5_std.html" >
+                        <a href="lock_jr4s_std.html" >
                             <div class="">精锐4S</div>
                         </a>
                     </li>
