--- a/index.html
+++ b/index.html
@@ -19,33 +19,41 @@
         <ul class="sn_bxslider">
             <li>
                 <div class="sn-swiper-item">
-                    <p>深思安全授权平台</p>
-                    <p>顶级安全技术全自动加密引擎远离盗版</p>
-                    <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn " >免费注册</a>
+                    <div class="wrap text-left">
+                        <p>深思安全授权平台</p>
+                        <p>顶级安全技术全自动加密引擎远离盗版</p>
+                        <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn " >免费注册</a>
+                    </div>
                 </div>
                 <img src="images/slides/1.png">
             </li>
             <li>
                 <div class="sn-swiper-item">
-                    <p>深思安全授权平台</p>
-                    <p>即时授权 提升用户体验<br/> 软件保护“零成本”</p>
-                    <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn " >免费注册</a>
+                    <div class="wrap text-left">
+                        <p>深思安全授权平台</p>
+                        <p>即时授权 提升用户体验<br/> 软件保护“零成本”</p>
+                        <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn " >免费注册</a>
+                    </div>
                 </div>
                 <img src="images/slides/2.png">
             </li>
             <li class="">
                 <div class="sn-swiper-item">
-                    <p>深思安全授权平台</p>
-                    <p>精准掌握所有软件授权使用情况 </p>
-                    <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn" >免费注册</a>
+                    <div class="wrap text-left">
+                        <p>深思安全授权平台</p>
+                        <p>精准掌握所有软件授权使用情况 </p>
+                        <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn" >免费注册</a>
+                    </div>
                 </div>
                 <img src="images/slides/3.png">
             </li>
             <li class="">
                 <div class="sn-swiper-item">
-                    <p>深思安全授权平台</p>
-                    <p>顶级安全技术全自动加密引擎 远离盗版</p>
-                    <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn " >免费注册</a>
+                    <div class="wrap text-left">
+                        <p>深思安全授权平台</p>
+                        <p>顶级安全技术全自动加密引擎 远离盗版</p>
+                        <a href="http://developer.senseshield.com/auth/register.jsp" class="reg-btn " >免费注册</a>
+                    </div>
                 </div>
                 <img src="images/slides/4.png">
             </li>
@@ -226,7 +234,7 @@
     <script>
         $(document).ready(function () {
             $('.sn_bxslider').bxSlider({
-                auto: true,
+                auto: false,
                 mode: 'fade'
             });
             $('.sn_partners_slide').bxSlider({
