--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <script>
         $(document).ready(function () {
             $('.sn_bxslider').bxSlider({
-                auto: false,
+                auto: true,
                 mode: 'fade'
             });
             $('.sn_partners_slide').bxSlider({
