--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
 <!--公共header-->
 <div class="bg-white  sn-header text-left">
     <div class="wrap clear-fix">
-        <a href="index.html" class="block">
+        <a href="index.html" class="logo_a">
             <div class="logo fl ">
                 <img src="images/logo/logo.png">
                 <div class="logo-txt">
