--- a/lock_jr5_std.html
+++ b/lock_jr5_std.html
@@ -151,7 +151,7 @@
                         </div>
                     </div>
 
-                    <p class="sn-ld-section-title margin-t-20">申请使用的产品</p>
+                    <p class="sn-ld-section-title margin-t-20">申请试用的产品</p>
                     <p class="margin-t-20">精锐5-试用版</p>
                     <p class="sn-ld-section-title margin-t-20">软件的类别</p>
                     <div class="sn-input-group height-45 margin-t-20">
