--- a/we_intellectual.html
+++ b/we_intellectual.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>软件加密狗_加密锁_授权管理_云加密|云授权平台-北京深思数盾</title>
     <!--[if lt IE 9]>
     <script src="scripts/html5shiv.min.js"></script>
