--- a/header.html
+++ b/header.html
@@ -20,7 +20,7 @@
                 <div class="sub-menu-group  ">
                     <ul class="sub-menu-item clear-fix">
                         <li class="disabled">
-                            <a class="text-center">
+                            <a class="text-center color-blue">
                                 云授权平台
                             </a>
                         </li>
@@ -43,7 +43,7 @@
                     </ul>
                     <ul class="sub-menu-item ">
                         <li class="disabled">
-                            <a class=" text-center" >
+                            <a class=" text-center color-blue" >
                                 专业工具
                             </a>
                         </li>
@@ -65,7 +65,7 @@
                     </ul>
                     <ul class="sub-menu-item ">
                         <li class="disabled">
-                            <a   class=" text-center" >
+                            <a   class=" text-center color-blue" >
                                 硬件加密锁
                             </a>
                         </li>
