--- a/header.html
+++ b/header.html
@@ -104,7 +104,7 @@
                     <li><a href="su_platform.html" >云授权</a></li>
                     <li><a href="download_5.html"  >精锐5</a></li>
                     <li>
-                        <a href="solution.html"  >解决方案<i class="icon-angle-right"></i></a>
+                        <a href="solution.html"  >解决方案<i class="sn-arrow-right"></i></a>
                         <ul class="sub-child-menu">
                             <li><a href="su_game.html"  >游戏行业</a></li>
                             <li><a href="su_manage.html"  >管理行业</a></li>
