--- a/footer.html
+++ b/footer.html
@@ -89,7 +89,7 @@
 <div class="sn-fix-menu">
     <div class="mask"></div>
     <a class="qq clear-fix" id='BizQQWPA' href="javascript:void(0);"></a>
-    <a class="mobile" href="tel:400-6506-701"></a>
+    <a class="mobile" href="javascript:void(0);"></a>
     <a class="qr" href="javascript:void(0); ">
         <img src="images/float_layer/qr.png">
     </a>
