--- a/we_intellectual.html
+++ b/we_intellectual.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="header"></div>
-    <img width="100%" src="images/update_imgs/clock.jpg" />
+    <img width="100%" src="images/sense.jpg">
 
     <!--page bar 所在位置-->
     <div class="sn-page-bar">
